# NewsFlow

./: .env.example  .gitignore  README.md  pyproject.toml  send_email.py
config/workflows/: tech_daily.yaml  trending_cn.yaml
newsflow/: __init__.py  main.py
newsflow/ai/: __init__.py  client.py  prompts.py
newsflow/collectors/: __init__.py  base.py  github_trending.py  hackernews.py  newsnow.py  registry.py  rss.py
newsflow/generators/: __init__.py  content_pipeline.py  image_generator.py  topic_picker.py  video_script.py  wechat_writer.py  xhs_writer.py
newsflow/mcp/: __init__.py  server.py
newsflow/models/: __init__.py  config.py  content.py  output.py
newsflow/pipeline/: __init__.py  engine.py
newsflow/processors/: __init__.py  filter.py  scorer.py
newsflow/publishers/: __init__.py  channels_publisher.py  remotion_producer.py  video_producer.py  wechat_publisher.py  xhs_publisher.py
newsflow/storage/: __init__.py  local.py
remotion/: package.json  remotion.config.ts  tsconfig.json
remotion/src/: CaptionOverlay.tsx  CoverTitle.tsx  Root.tsx  VideoComposition.tsx  WaveBackground.tsx
tests/: test_core.py
