[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "newsflow"
version = "0.1.0"
description = "AI-powered news aggregation, processing and distribution pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "pydantic>=2.7.0",
    "litellm>=1.40.0",
    "fastmcp>=2.0.0",
    "typer>=0.12.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.3.0",
    "beautifulsoup4>=4.12.3",
    "trafilatura>=1.10.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
newsflow = "newsflow.main:app"

[tool.hatch.build.targets.wheel]
packages = ["newsflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
